--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,13 @@ footer {
 }
 
 /* Fin NAV */
+body {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(19, 18, 18, 0.849);
+}
+
 /* Titulo */
 .imagen-titulo {
   background-image: url(../img/yerba-suelta.webp);
@@ -59,7 +66,62 @@ footer {
   box-shadow: 1px 1px 5px rgb(63, 72, 30);
 }
 
-/* Instructivo */
+/* Inicio - estilos cards Index- Instructivo*/
+.contenedor-instructivo {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+}
+
+.contenido-card {
+  display: flex;
+  width: 800px;
+  height: auto;
+  background: #fff;
+  padding: 0 20px;
+  border-radius: 2px;
+  box-shadow: 1px 1px 4px 2px rgba(0, 0, 0, 0.2);
+  transition: 0.2s;
+}
+
+.contenido-card:hover .foto-card {
+  box-shadow: 1px 1px 8px 8px rgba(63, 72, 30, 0.692);
+}
+
+.titulo-instructivo {
+  display: block;
+  position: relative;
+  width: 300vh;
+}
+
+.descripcion-instructivo {
+  background-color: rgb(63, 72, 30);
+  border-radius: 5%;
+  border: none;
+  color: #fff;
+  position: relative;
+  text-align: center;
+  justify-content: center;
+}
+
+.descripcion-instructivo p {
+  margin: 20px 30px;
+}
+
+.titulo-instructivo, .descripcion-instructivo {
+  padding: 20px;
+  text-align: center;
+}
+
+.titulo-instructivo .foto-card {
+  box-shadow: 0 0 0 8px rgba(0, 0, 0, 0.06);
+  width: 100%;
+  margin: 40px 0px 10px -15px;
+}
+
 /* Video */
 .video {
   display: flex;
@@ -78,14 +140,13 @@ footer {
   text-align: center;
 }
 
-body {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(19, 18, 18, 0.849);
+/* Formulario  - Contacto */
+section {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-/* Formulario  - Contacto */
 .formulario-container {
   max-width: 700px;
   margin: 30px;
@@ -171,62 +232,6 @@ body {
   background-color: rgb(180, 180, 180);
 }
 
-/* Inicio - estilos cards Index- Instructivo*/
-.contenedor-instructivo {
-  display: flex;
-  flex-direction: column;
-  gap: 15px;
-  align-items: center;
-  justify-content: center;
-  height: 100%;
-}
-
-.contenido-card {
-  display: flex;
-  width: 800px;
-  height: auto;
-  background: #fff;
-  padding: 0 20px;
-  border-radius: 2px;
-  box-shadow: 1px 1px 4px 2px rgba(0, 0, 0, 0.2);
-  transition: 0.2s;
-}
-
-.contenido-card:hover .foto-card {
-  box-shadow: 1px 1px 8px 8px rgba(63, 72, 30, 0.692);
-}
-
-.titulo-instructivo {
-  display: block;
-  position: relative;
-  width: 300vh;
-}
-
-.descripcion-instructivo {
-  background-color: rgb(63, 72, 30);
-  border-radius: 5%;
-  border: none;
-  color: #fff;
-  position: relative;
-  text-align: center;
-  justify-content: center;
-}
-
-.descripcion-instructivo p {
-  margin: 20px 30px;
-}
-
-.titulo-instructivo, .descripcion-instructivo {
-  padding: 20px;
-  text-align: center;
-}
-
-.titulo-instructivo .foto-card {
-  box-shadow: 0 0 0 8px rgba(0, 0, 0, 0.06);
-  width: 100%;
-  margin: 40px 0px 10px -15px;
-}
-
 /* Inicio - estlilo de las card - productos / accesorios */
 /* Grid para las cards */
 .conteiner_productos {
@@ -283,6 +288,21 @@ body {
   display: flex;
   text-align: center;
   justify-content: center;
+}
+
+.direction {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-size: 2rem;
+  text-decoration: wavy;
+}
+
+.direction:hover {
+  text-decoration: underline solid;
+  color: black;
+  text-shadow: 1px 1px 5px rgb(63, 72, 30);
 }
 
 /*botones */
