--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,13 +4,17 @@
 @import './partials/variables';
 
 
-html{
-   
-}
-
 
 
 /* Fin NAV */
+
+
+body{
+   position: relative;
+   width: 100%;
+   height: 100%;
+   background-color: rgba(19, 18, 18, 0.849);
+}
 
 /* Titulo */
 .imagen-titulo{
@@ -37,28 +41,62 @@ html{
       text-shadow: 1px 1px 5px rgba(0, 0, 0, .45);
       box-shadow: 1px 1px 5px rgb(63, 72, 30);
    }
-
-   /* Instructivo */
    
-
-
-
-   // .como_mate { 
-   //    width: 100%;
-   //    display: grid;
-   //    padding: 2rem ;
-   //    height: 100%;
-   //    margin-left: 10%;
-   //    display: grid;
-   //    gap: 0.5rem;
-   //    grid-template-columns: repeat(2, 1fr);
-   // }
-   // .card-body {
-   //    width: 100%;
-   //    color: white;
-   //    padding: 16px;
-   // }
+   /* Inicio - estilos cards Index- Instructivo*/
+   .contenedor-instructivo{
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+      align-items: center;
+      justify-content: center;
+      height: 100%;
+      
+   }
+   .contenido-card{
+      display: flex;
+      width: 800px;
+      height: auto;
+      background: #fff;
+      padding: 0 20px;
+      border-radius: 2px;
+      box-shadow: 1px 1px 4px 2px rgba(0,0,0,.2);
+      transition: .2s;
+      
+   }
+   .contenido-card:hover .foto-card{
+      box-shadow: 1px 1px 8px 8px rgba(63, 72, 30, 0.692);
+      
+   }
    
+   .titulo-instructivo{ 
+      display: block;
+      position: relative;
+      width: 300vh;
+   }
+   .descripcion-instructivo{
+      background-color: rgb(63, 72, 30);
+      border-radius: 5%;
+      border: none;
+      color: #fff;
+      position: relative;
+      text-align: center;
+      justify-content: center;
+      
+   }
+   .descripcion-instructivo p{
+      margin: 20px 30px;
+   }
+   .titulo-instructivo, .descripcion-instructivo{
+      padding: 20px;
+      text-align: center;
+   }
+   .titulo-instructivo .foto-card{
+      box-shadow: 0 0 0 8px rgba(0, 0, 0, .06);
+      width: 100%;
+      margin: 40px 0px 10px -15px;
+   
+   }
+
    /* Video */
    
    .video {
@@ -77,18 +115,15 @@ html{
 }
 
 
-body{
-   position: relative;
-   width: 100%;
-   height: 100%;
-   background-color: rgba(19, 18, 18, 0.849);
-}
-
-
 
 
 /* Formulario  - Contacto */
+section {
+   display: flex;
+   align-items: center;
+   justify-content: center;
 
+}
  
  .formulario-container {
    max-width: 700px;
@@ -180,60 +215,6 @@ body{
    overflow: auto;
    background-color: rgb(180, 180, 180);
 }
-/* Inicio - estilos cards Index- Instructivo*/
-.contenedor-instructivo{
-   display: flex;
-   flex-direction: column;
-   gap: 15px;
-   align-items: center;
-   justify-content: center;
-   height: 100%;
-   
-}
-.contenido-card{
-   display: flex;
-   width: 800px;
-   height: auto;
-   background: #fff;
-   padding: 0 20px;
-   border-radius: 2px;
-   box-shadow: 1px 1px 4px 2px rgba(0,0,0,.2);
-   transition: .2s;
-   
-}
-.contenido-card:hover .foto-card{
-   box-shadow: 1px 1px 8px 8px rgba(63, 72, 30, 0.692);
-   
-}
-
-.titulo-instructivo{ 
-   display: block;
-   position: relative;
-   width: 300vh;
-}
-.descripcion-instructivo{
-   background-color: rgb(63, 72, 30);
-   border-radius: 5%;
-   border: none;
-   color: #fff;
-   position: relative;
-   text-align: center;
-   justify-content: center;
-   
-}
-.descripcion-instructivo p{
-   margin: 20px 30px;
-}
-.titulo-instructivo, .descripcion-instructivo{
-   padding: 20px;
-   text-align: center;
-}
-.titulo-instructivo .foto-card{
-   box-shadow: 0 0 0 8px rgba(0, 0, 0, .06);
-   width: 100%;
-   margin: 40px 0px 10px -15px;
-
-}
 
 /* Inicio - estlilo de las card - productos / accesorios */
 
@@ -293,6 +274,19 @@ body{
 
    }
 
+   .direction{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: white;
+      font-size: 2rem;
+      text-decoration:wavy;
+   }
+   .direction:hover {
+      text-decoration:underline solid;
+      color: black;
+      text-shadow: 1px 1px 5px rgb(63, 72, 30);
+   }
    /*botones */
    .boton_abajo {
       border-radius: 4px;
