--- a/scss/partials/_footer.scss
+++ b/scss/partials/_footer.scss
@@ -55,7 +55,7 @@ footer{
     display: flex;
     justify-content: center;
 }
-.logo {
+.logo-footer {
     width: 150px;
     padding: 10px 20px;
     align-self: center;
