--- a/css/style.css
+++ b/css/style.css
@@ -488,6 +488,13 @@ section {
   background-color: rgb(63, 72, 30);
 }
 
+.error-404 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.2rem;
+}
+
 @media (max-width: 1100px) {
   .conteiner_productos {
     grid-template-columns: repeat(2, 1fr);
