--- a/scss/style.scss
+++ b/scss/style.scss
@@ -348,7 +348,12 @@ section {
    .map{
       background-color: rgb(63, 72, 30);
    }
-
+   .error-404{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 1.2rem;
+   }
    
    
    @import './partials/queries';
