--- a/css/style.css
+++ b/css/style.css
@@ -493,6 +493,7 @@ section {
   justify-content: center;
   align-items: center;
   font-size: 1.2rem;
+  color: white;
 }
 
 @media (max-width: 1100px) {
