--- a/scss/style.scss
+++ b/scss/style.scss
@@ -353,6 +353,7 @@ section {
       justify-content: center;
       align-items: center;
       font-size: 1.2rem;
+      color: white
    }
    
    
