--- a/css/style.css
+++ b/css/style.css
@@ -285,6 +285,10 @@ section {
   margin-bottom: 20px;
 }
 
+::placeholder {
+  color: white;
+}
+
 .formulario-container .formulario .input {
   color: white;
   width: 100%;
