--- a/scss/style.scss
+++ b/scss/style.scss
@@ -141,6 +141,9 @@ section {
    font-weight: 800;
    margin-bottom: 20px;
  }
+ ::placeholder{
+   color: white;
+ }
  
  .formulario-container .formulario .input {
    color: white;
