--- a/scss/style.scss
+++ b/scss/style.scss
@@ -142,7 +142,7 @@ section {
    margin-bottom: 20px;
  }
  ::placeholder{
-   color: white;
+   color: whitesmoke;
  }
  
  .formulario-container .formulario .input {
